# Products.ZMySQLDA

./: .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  CREDITS.txt  MANIFEST.in  NEWS.txt  README.md  README.rst  VERSION.txt  buildout.cfg  buildout2.cfg  buildout4.cfg  buildout_213.cfg  pyproject.toml  rtd.txt  setup.cfg  setup.py  tox.ini  version.txt  zope2.cfg
.github/workflows/: tests.yml
Products/ZMySQLDA/: DA.py  DABase.py  __init__.py  db.py  joinTM.py  permissions.py  utils.py
Products/ZMySQLDA/help/: DA.py  DABase.py  db.py
Products/ZMySQLDA/tests/: base.py  dummy.py  test_DA.py  test_db.py  test_utils.py
Products/ZMySQLDA/www/: browse.dtml  connectionAdd.dtml  connectionEdit.dtml
ZMySQLDA/: CHANGES.txt  DA.py  db.py
docs/: api_da.rst  conf.py  connstring.rst  contributors.rst  development.rst  index.rst  usage_zmi.rst
src/Products/ZMySQLDA/: DA.py  db.py  utils.py
src/Products/ZMySQLDA/tests/: base.py  dummy.py  test_DA.py  test_db.py  test_utils.py
src/Products/ZMySQLDA/www/: browse.dtml  connectionAdd.dtml  connectionEdit.dtml
